--- a/packages/web/src/styles/globals.css
+++ b/packages/web/src/styles/globals.css
@@ -1,4 +1,16 @@
 @layer theme, base, mui, components, utilities;
-@import 'tailwindcss';
+@import "tailwindcss";
 @config "../../tailwind.config.ts";
 @import "./joker.css";
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  scroll-snap-align: start;
+}
+
+body {
+  scroll-snap-type: y mandatory;
+}
